--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "highcharts": "^5.0.14",
     "lodash": "^4.17.4",
     "vue": "^2.3.3",
     "vuex": "^2.3.1"
